rename mofa tuto for consistency, make sure tensor fig is out

--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -438,7 +438,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now running: stim&1488: 100%|██████████| 16/16 [01:57<00:00,  7.37s/it]\n"
+      "Now running: stim&1488: 100%|██████████| 16/16 [01:41<00:00,  6.35s/it]\n"
      ]
     }
    ],
@@ -502,7 +502,6 @@
        "      <th>lrscore</th>\n",
        "      <th>lr_probs</th>\n",
        "      <th>cellchat_pvals</th>\n",
-       "      <th>steady_rank</th>\n",
        "      <th>specificity_rank</th>\n",
        "      <th>magnitude_rank</th>\n",
        "    </tr>\n",
@@ -515,7 +514,7 @@
        "      <td>CD8 T cells</td>\n",
        "      <td>B2M</td>\n",
        "      <td>CD3D</td>\n",
-       "      <td>2.483041</td>\n",
+       "      <td>2.483042</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.652776</td>\n",
        "      <td>1.086438</td>\n",
@@ -524,7 +523,6 @@
        "      <td>0.978141</td>\n",
        "      <td>0.119143</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.014362e-10</td>\n",
        "      <td>1.998437e-08</td>\n",
        "      <td>7.178280e-13</td>\n",
        "    </tr>\n",
@@ -544,7 +542,6 @@
        "      <td>0.985015</td>\n",
        "      <td>0.222247</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.702613e-10</td>\n",
        "      <td>8.124073e-09</td>\n",
        "      <td>8.335264e-13</td>\n",
        "    </tr>\n",
@@ -564,7 +561,6 @@
        "      <td>0.981475</td>\n",
        "      <td>0.144068</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.256552e-10</td>\n",
        "      <td>2.078555e-08</td>\n",
        "      <td>9.917912e-13</td>\n",
        "    </tr>\n",
@@ -584,7 +580,6 @@
        "      <td>0.984116</td>\n",
        "      <td>0.266597</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.111772e-10</td>\n",
        "      <td>5.695394e-09</td>\n",
        "      <td>1.326462e-12</td>\n",
        "    </tr>\n",
@@ -604,7 +599,6 @@
        "      <td>0.981838</td>\n",
        "      <td>0.246975</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.158272e-09</td>\n",
        "      <td>9.262294e-08</td>\n",
        "      <td>2.358582e-12</td>\n",
        "    </tr>\n",
@@ -624,7 +618,6 @@
        "      <td>0.982827</td>\n",
        "      <td>0.232994</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.696358e-10</td>\n",
        "      <td>1.191677e-08</td>\n",
        "      <td>2.523211e-12</td>\n",
        "    </tr>\n",
@@ -644,7 +637,6 @@
        "      <td>0.981442</td>\n",
        "      <td>0.143954</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.256552e-10</td>\n",
        "      <td>2.078555e-08</td>\n",
        "      <td>7.934094e-12</td>\n",
        "    </tr>\n",
@@ -664,7 +656,6 @@
        "      <td>0.984287</td>\n",
        "      <td>0.201439</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.897528e-11</td>\n",
        "      <td>3.357910e-09</td>\n",
        "      <td>1.755218e-11</td>\n",
        "    </tr>\n",
@@ -684,7 +675,6 @@
        "      <td>0.978075</td>\n",
        "      <td>0.118691</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>5.014362e-10</td>\n",
        "      <td>1.998437e-08</td>\n",
        "      <td>1.815579e-11</td>\n",
        "    </tr>\n",
@@ -699,12 +689,11 @@
        "      <td>0.0</td>\n",
        "      <td>5.273580</td>\n",
        "      <td>1.221836</td>\n",
-       "      <td>2.444704</td>\n",
+       "      <td>2.444705</td>\n",
        "      <td>0.096966</td>\n",
        "      <td>0.981173</td>\n",
        "      <td>0.236313</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6.395118e-09</td>\n",
        "      <td>1.667443e-07</td>\n",
        "      <td>1.886791e-11</td>\n",
        "    </tr>\n",
@@ -726,7 +715,7 @@
        "193306  ctrl&1039    CD14+ Monocytes  CD14+ Monocytes          TIMP1   \n",
        "\n",
        "       receptor_complex  lr_means  cellphone_pvals  expr_prod  scaled_weight  \\\n",
-       "480788             CD3D  2.483041              0.0   2.652776       1.086438   \n",
+       "480788             CD3D  2.483042              0.0   2.652776       1.086438   \n",
        "230496             CD63  2.504210              0.0   5.661785       1.703509   \n",
        "670320             CD3D  2.655090              0.0   3.819609       1.123354   \n",
        "0                  CD63  2.627803              0.0   6.208072       1.545891   \n",
@@ -747,19 +736,19 @@
        "670321  0.731686     0.085537  0.981442  0.143954             0.0   \n",
        "340011  2.288309     0.129141  0.984287  0.201439             0.0   \n",
        "480789  0.593775     0.076761  0.978075  0.118691             0.0   \n",
-       "193306  2.444704     0.096966  0.981173  0.236313             0.0   \n",
+       "193306  2.444705     0.096966  0.981173  0.236313             0.0   \n",
        "\n",
-       "         steady_rank  specificity_rank  magnitude_rank  \n",
-       "480788  5.014362e-10      1.998437e-08    7.178280e-13  \n",
-       "230496  1.702613e-10      8.124073e-09    8.335264e-13  \n",
-       "670320  5.256552e-10      2.078555e-08    9.917912e-13  \n",
-       "0       1.111772e-10      5.695394e-09    1.326462e-12  \n",
-       "193305  3.158272e-09      9.262294e-08    2.358582e-12  \n",
-       "45325   2.696358e-10      1.191677e-08    2.523211e-12  \n",
-       "670321  5.256552e-10      2.078555e-08    7.934094e-12  \n",
-       "340011  5.897528e-11      3.357910e-09    1.755218e-11  \n",
-       "480789  5.014362e-10      1.998437e-08    1.815579e-11  \n",
-       "193306  6.395118e-09      1.667443e-07    1.886791e-11  "
+       "        specificity_rank  magnitude_rank  \n",
+       "480788      1.998437e-08    7.178280e-13  \n",
+       "230496      8.124073e-09    8.335264e-13  \n",
+       "670320      2.078555e-08    9.917912e-13  \n",
+       "0           5.695394e-09    1.326462e-12  \n",
+       "193305      9.262294e-08    2.358582e-12  \n",
+       "45325       1.191677e-08    2.523211e-12  \n",
+       "670321      2.078555e-08    7.934094e-12  \n",
+       "340011      3.357910e-09    1.755218e-11  \n",
+       "480789      1.998437e-08    1.815579e-11  \n",
+       "193306      1.667443e-07    1.886791e-11  "
       ]
      },
      "execution_count": 10,
@@ -807,7 +796,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8776766088898)>"
+       "<ggplot: (8726596516015)>"
       ]
      },
      "execution_count": 11,
@@ -1148,7 +1137,7 @@
        "      <td>0.250515</td>\n",
        "      <td>0.291238</td>\n",
        "      <td>0.209750</td>\n",
-       "      <td>4.045001e-11</td>\n",
+       "      <td>4.045002e-11</td>\n",
        "      <td>0.230164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1157,7 +1146,7 @@
        "      <td>0.289020</td>\n",
        "      <td>0.347047</td>\n",
        "      <td>0.229742</td>\n",
-       "      <td>9.722762e-03</td>\n",
+       "      <td>9.722763e-03</td>\n",
        "      <td>0.251355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1166,7 +1155,7 @@
        "      <td>0.222026</td>\n",
        "      <td>0.288151</td>\n",
        "      <td>0.249341</td>\n",
-       "      <td>1.919018e-02</td>\n",
+       "      <td>1.919019e-02</td>\n",
        "      <td>0.245270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1175,7 +1164,7 @@
        "      <td>0.280397</td>\n",
        "      <td>0.304960</td>\n",
        "      <td>0.242466</td>\n",
-       "      <td>5.143913e-03</td>\n",
+       "      <td>5.143912e-03</td>\n",
        "      <td>0.226567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1184,7 +1173,7 @@
        "      <td>0.211942</td>\n",
        "      <td>0.328490</td>\n",
        "      <td>0.304108</td>\n",
-       "      <td>1.931904e-06</td>\n",
+       "      <td>1.931906e-06</td>\n",
        "      <td>0.209220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1211,7 +1200,7 @@
        "      <td>0.225073</td>\n",
        "      <td>0.290722</td>\n",
        "      <td>0.253139</td>\n",
-       "      <td>1.752456e-07</td>\n",
+       "      <td>1.752458e-07</td>\n",
        "      <td>0.223687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1292,14 +1281,14 @@
       ],
       "text/plain": [
        "           Factor 1  Factor 2  Factor 3  Factor 4      Factor 5  Factor 6\n",
-       "ctrl&101   0.257491  0.250515  0.291238  0.209750  4.045001e-11  0.230164\n",
-       "ctrl&1015  0.277434  0.289020  0.347047  0.229742  9.722762e-03  0.251355\n",
-       "ctrl&1016  0.227853  0.222026  0.288151  0.249341  1.919018e-02  0.245270\n",
-       "ctrl&1039  0.261392  0.280397  0.304960  0.242466  5.143913e-03  0.226567\n",
-       "ctrl&107   0.249066  0.211942  0.328490  0.304108  1.931904e-06  0.209220\n",
+       "ctrl&101   0.257491  0.250515  0.291238  0.209750  4.045002e-11  0.230164\n",
+       "ctrl&1015  0.277434  0.289020  0.347047  0.229742  9.722763e-03  0.251355\n",
+       "ctrl&1016  0.227853  0.222026  0.288151  0.249341  1.919019e-02  0.245270\n",
+       "ctrl&1039  0.261392  0.280397  0.304960  0.242466  5.143912e-03  0.226567\n",
+       "ctrl&107   0.249066  0.211942  0.328490  0.304108  1.931906e-06  0.209220\n",
        "ctrl&1244  0.264326  0.262837  0.320916  0.272101  2.084333e-04  0.250919\n",
        "ctrl&1256  0.281715  0.269388  0.317463  0.174800  3.152366e-02  0.242772\n",
-       "ctrl&1488  0.254299  0.225073  0.290722  0.253139  1.752456e-07  0.223687\n",
+       "ctrl&1488  0.254299  0.225073  0.290722  0.253139  1.752458e-07  0.223687\n",
        "stim&101   0.250849  0.224470  0.207676  0.200306  3.511370e-01  0.266080\n",
        "stim&1015  0.244471  0.313315  0.155530  0.230140  4.200566e-01  0.264417\n",
        "stim&1016  0.247753  0.267775  0.165014  0.223388  3.233468e-01  0.255119\n",
@@ -1366,52 +1355,52 @@
        "    <tr>\n",
        "      <th>CCL8^CCR1</th>\n",
        "      <td>0.014531</td>\n",
-       "      <td>1.082392e-43</td>\n",
+       "      <td>1.082397e-43</td>\n",
        "      <td>1.009739e-08</td>\n",
-       "      <td>1.382172e-54</td>\n",
+       "      <td>1.382158e-54</td>\n",
        "      <td>0.256470</td>\n",
-       "      <td>2.090143e-99</td>\n",
+       "      <td>2.090158e-99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LGALS9^CD47</th>\n",
        "      <td>0.017797</td>\n",
-       "      <td>7.054909e-02</td>\n",
-       "      <td>9.748616e-02</td>\n",
-       "      <td>3.277709e-05</td>\n",
+       "      <td>7.054908e-02</td>\n",
+       "      <td>9.748617e-02</td>\n",
+       "      <td>3.277711e-05</td>\n",
        "      <td>0.248650</td>\n",
        "      <td>2.394954e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LGALS9^PTPRC</th>\n",
        "      <td>0.015729</td>\n",
-       "      <td>7.894370e-02</td>\n",
+       "      <td>7.894369e-02</td>\n",
        "      <td>1.006120e-01</td>\n",
-       "      <td>1.665213e-03</td>\n",
+       "      <td>1.665215e-03</td>\n",
        "      <td>0.247889</td>\n",
        "      <td>2.391179e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LGALS9^CD44</th>\n",
        "      <td>0.014985</td>\n",
-       "      <td>7.810906e-02</td>\n",
+       "      <td>7.810905e-02</td>\n",
        "      <td>1.030404e-01</td>\n",
-       "      <td>1.724221e-03</td>\n",
+       "      <td>1.724222e-03</td>\n",
        "      <td>0.245097</td>\n",
-       "      <td>2.365561e-01</td>\n",
+       "      <td>2.365562e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CCL8^CCR5</th>\n",
        "      <td>0.009039</td>\n",
-       "      <td>4.910119e-39</td>\n",
-       "      <td>1.070082e-08</td>\n",
-       "      <td>7.998121e-51</td>\n",
+       "      <td>4.910144e-39</td>\n",
+       "      <td>1.070083e-08</td>\n",
+       "      <td>7.998036e-51</td>\n",
        "      <td>0.232782</td>\n",
-       "      <td>1.708849e-107</td>\n",
+       "      <td>1.708863e-107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LGALS9^HAVCR2</th>\n",
        "      <td>0.028643</td>\n",
-       "      <td>1.502120e-23</td>\n",
+       "      <td>1.502122e-23</td>\n",
        "      <td>9.318549e-02</td>\n",
        "      <td>1.006984e-01</td>\n",
        "      <td>0.231562</td>\n",
@@ -1420,18 +1409,18 @@
        "    <tr>\n",
        "      <th>LGALS1^CD69</th>\n",
        "      <td>0.031894</td>\n",
-       "      <td>9.359273e-02</td>\n",
+       "      <td>9.359272e-02</td>\n",
        "      <td>2.656095e-02</td>\n",
-       "      <td>9.371965e-08</td>\n",
+       "      <td>9.371983e-08</td>\n",
        "      <td>0.219863</td>\n",
        "      <td>3.382630e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TNFSF13B^CD40</th>\n",
        "      <td>0.004711</td>\n",
-       "      <td>2.919903e-41</td>\n",
+       "      <td>2.919905e-41</td>\n",
        "      <td>7.997553e-02</td>\n",
-       "      <td>4.810765e-74</td>\n",
+       "      <td>4.810676e-74</td>\n",
        "      <td>0.219077</td>\n",
        "      <td>9.893856e-02</td>\n",
        "    </tr>\n",
@@ -1447,11 +1436,11 @@
        "    <tr>\n",
        "      <th>CCL2^CCR1</th>\n",
        "      <td>0.000218</td>\n",
-       "      <td>4.510655e-46</td>\n",
+       "      <td>4.510676e-46</td>\n",
        "      <td>8.349771e-02</td>\n",
-       "      <td>1.400036e-58</td>\n",
+       "      <td>1.400019e-58</td>\n",
        "      <td>0.200234</td>\n",
-       "      <td>1.767171e-104</td>\n",
+       "      <td>1.767179e-104</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1459,28 +1448,28 @@
       ],
       "text/plain": [
        "                   Factor 1      Factor 2      Factor 3      Factor 4  \\\n",
-       "CCL8^CCR1          0.014531  1.082392e-43  1.009739e-08  1.382172e-54   \n",
-       "LGALS9^CD47        0.017797  7.054909e-02  9.748616e-02  3.277709e-05   \n",
-       "LGALS9^PTPRC       0.015729  7.894370e-02  1.006120e-01  1.665213e-03   \n",
-       "LGALS9^CD44        0.014985  7.810906e-02  1.030404e-01  1.724221e-03   \n",
-       "CCL8^CCR5          0.009039  4.910119e-39  1.070082e-08  7.998121e-51   \n",
-       "LGALS9^HAVCR2      0.028643  1.502120e-23  9.318549e-02  1.006984e-01   \n",
-       "LGALS1^CD69        0.031894  9.359273e-02  2.656095e-02  9.371965e-08   \n",
-       "TNFSF13B^CD40      0.004711  2.919903e-41  7.997553e-02  4.810765e-74   \n",
+       "CCL8^CCR1          0.014531  1.082397e-43  1.009739e-08  1.382158e-54   \n",
+       "LGALS9^CD47        0.017797  7.054908e-02  9.748617e-02  3.277711e-05   \n",
+       "LGALS9^PTPRC       0.015729  7.894369e-02  1.006120e-01  1.665215e-03   \n",
+       "LGALS9^CD44        0.014985  7.810905e-02  1.030404e-01  1.724222e-03   \n",
+       "CCL8^CCR5          0.009039  4.910144e-39  1.070083e-08  7.998036e-51   \n",
+       "LGALS9^HAVCR2      0.028643  1.502122e-23  9.318549e-02  1.006984e-01   \n",
+       "LGALS1^CD69        0.031894  9.359272e-02  2.656095e-02  9.371983e-08   \n",
+       "TNFSF13B^CD40      0.004711  2.919905e-41  7.997553e-02  4.810676e-74   \n",
        "TNFSF13B^HLA-DPB1  0.003808  3.022707e-02  1.601356e-01  1.198362e-03   \n",
-       "CCL2^CCR1          0.000218  4.510655e-46  8.349771e-02  1.400036e-58   \n",
+       "CCL2^CCR1          0.000218  4.510676e-46  8.349771e-02  1.400019e-58   \n",
        "\n",
        "                   Factor 5       Factor 6  \n",
-       "CCL8^CCR1          0.256470   2.090143e-99  \n",
+       "CCL8^CCR1          0.256470   2.090158e-99  \n",
        "LGALS9^CD47        0.248650   2.394954e-01  \n",
        "LGALS9^PTPRC       0.247889   2.391179e-01  \n",
-       "LGALS9^CD44        0.245097   2.365561e-01  \n",
-       "CCL8^CCR5          0.232782  1.708849e-107  \n",
+       "LGALS9^CD44        0.245097   2.365562e-01  \n",
+       "CCL8^CCR5          0.232782  1.708863e-107  \n",
        "LGALS9^HAVCR2      0.231562   1.078784e-02  \n",
        "LGALS1^CD69        0.219863   3.382630e-01  \n",
        "TNFSF13B^CD40      0.219077   9.893856e-02  \n",
        "TNFSF13B^HLA-DPB1  0.205252   1.865001e-01  \n",
-       "CCL2^CCR1          0.200234  1.767171e-104  "
+       "CCL2^CCR1          0.200234  1.767179e-104  "
       ]
      },
      "execution_count": 21,
@@ -1709,7 +1698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
