--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multicellular Factor Analysis"
+    "# MOFAcellular - Multicellular Factor Analysis"
    ]
   },
   {
@@ -994,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
