--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -1538,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
   },
   "vscode": {
    "interpreter": {
