re-run mofacell

--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -51,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +117,7 @@
        "    layers: 'counts'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:02<00:00,  3.18it/s]\n"
+      "100%|██████████| 8/8 [00:02<00:00,  3.06it/s]\n"
      ]
     }
    ],
@@ -251,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +303,7 @@
        "      layers:\t'psbulk_props'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +365,7 @@
        "    layers: 'psbulk_props'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +629,7 @@
        "4   patient_107  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,18 +660,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ttest_relResult(statistic=-52.89592183033927, pvalue=2.261745424789714e-10)\n",
-      "Ttest_relResult(statistic=0.009768318863543653, pvalue=0.9924786981982812)\n",
-      "Ttest_relResult(statistic=-0.09886026303192857, pvalue=0.9240206972457101)\n",
-      "Ttest_relResult(statistic=-0.9380112449126572, pvalue=0.37946640180226615)\n",
-      "Ttest_relResult(statistic=0.37580359935568813, pvalue=0.7181927237359216)\n"
+      "TtestResult(statistic=-52.895921830339276, pvalue=2.261745424789714e-10, df=7)\n",
+      "TtestResult(statistic=0.009768318863540843, pvalue=0.9924786981982834, df=7)\n",
+      "TtestResult(statistic=-0.09886026303193106, pvalue=0.9240206972457082, df=7)\n",
+      "TtestResult(statistic=-0.938011244912656, pvalue=0.37946640180226676, df=7)\n",
+      "TtestResult(statistic=0.3758035993556859, pvalue=0.7181927237359234, df=7)\n"
      ]
     }
    ],
@@ -689,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -705,10 +713,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8784863767393)>"
+       "<ggplot: (8784582642520)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +823,7 @@
        "3154  3.271283  CD14  TNFSF10"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -845,10 +853,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8784863280516)>"
+       "<ggplot: (8784582632373)>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +921,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +943,7 @@
        "<Figure size 640x480 with 2 Axes>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "liana-py",
+   "display_name": "spiana",
    "language": "python",
    "name": "python3"
   },
@@ -999,7 +1007,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "80a99255e5b17beb6f8c8dc403ec70687184f3f6557a2c5fe71e16aa6505930d"
+    "hash": "b688e7f183144fde965166e58483e32fc6dbc6fc380ccc51d49ef608da0385a8"
    }
   }
  },
