--- a/rewrite_misty.ipynb
+++ b/rewrite_misty.ipynb
@@ -60,11 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from liana.mt.sp._misty import _check_target_in_predictors, _check_features, _single_view_model, _mask_connectivity, _multi_model, _format_targets, _format_importances, _concat_dataframes"
+    "from liana.mt.sp._misty import _check_target_in_predictors, _check_features, _single_view_model, \\\n",
+    "    _mask_connectivity, _multi_model, _format_targets, _format_importances, _concat_dataframes, _check_if_squidpy"
    ]
   },
   {
@@ -76,21 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "juxta_cutoff = np.inf\n",
     "set_diag = True\n",
     "spatial_key = 'spatial'\n",
     "bandwidth = 10\n",
+    "n_neighs = 6\n",
     "kernel = 'misty_rbf'\n",
+    "cutoff = 0.1\n",
+    "juxta_cutoff = np.inf\n",
     "zoi = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +125,7 @@
     "    else:\n",
     "        obsp=None\n",
     "        \n",
-    "    return AnnData(adata.X, obs=adata.obs, obsp=obsp)"
+    "    return AnnData(X=adata.X, obs=adata.obs, obsp=obsp)"
    ]
   },
   {
@@ -163,6 +166,18 @@
     "                           spatial_key=spatial_key\n",
     "                           )\n",
     "\n",
+    "sq = _check_if_squidpy()\n",
+    "neighbors, dists = sq.gr.spatial_neighbors(adata=xdata, \n",
+    "                                           coord_type=\"generic\", \n",
+    "                                           copy=True,\n",
+    "                                           delaunay=True,\n",
+    "                                           spatial_key=spatial_key,\n",
+    "                                           set_diag=set_diag,\n",
+    "                                           n_neighs=n_neighs,\n",
+    "                                        #    **kwargs\n",
+    "                                           )\n",
+    "neighbors[dists > juxta_cutoff] = 0\n",
+    "\n",
     "juxta = _make_view(xdata, use_raw=False, layer=None, connecitivity=neighbors)"
    ]
   },
@@ -177,7 +192,7 @@
     "                            kernel=kernel,\n",
     "                            set_diag=set_diag, \n",
     "                            inplace=False,\n",
-    "                            cutoff=0,\n",
+    "                            cutoff=cutoff,\n",
     "                            zoi=zoi\n",
     "                            )\n",
     "para = _make_view(xdata, use_raw=False, layer=None, connecitivity=weights)"
@@ -185,7 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "views = {'intra':intra, 'juxta':juxta, 'para':para}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +223,13 @@
    "source": [
     "views = MuData({'intra':intra, 'juxta':juxta, 'para':para})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -421,6 +452,194 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>MuData object with n_obs × n_vars = 4205 × 33\n",
+       "  3 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "    juxta:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;\n",
+       "    para:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;</pre>"
+      ],
+      "text/plain": [
+       "MuData object with n_obs × n_vars = 4205 × 33\n",
+       "  3 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "    juxta:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "      obsp:\t'spatial_connectivities'\n",
+       "    para:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "      obsp:\t'spatial_connectivities'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "views"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Misty(MuData):\n",
+    "\n",
+    "    def __init__(self, views):\n",
+    "        MuData.__init__(self, views)\n",
+    "        self.view_names = list(self.mod.keys())\n",
+    "        self._check_views()\n",
+    "    \n",
+    "    def _check_views(self):\n",
+    "        assert isinstance(self, MuData), \"views must be a MuData object\"\n",
+    "        assert \"intra\" in self.view_names, \"views must contain an intra view\"\n",
+    "        assert len(self.view_names)>1, \"views must be of length > 1\"\n",
+    "        \n",
+    "        for view in self.view_names:\n",
+    "            if view==\"intra\":\n",
+    "                continue\n",
+    "            if \"spatial_connectivities\" not in self.mod[view].obsp.keys():\n",
+    "                raise ValueError(f\"view {view} must contain a spatial_connectivities key in .obsp\")\n",
+    "            \n",
+    "            \n",
+    "    def _get_conn(self, view_name):\n",
+    "        return self.mod[view_name].obsp[\"spatial_connectivities\"]\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "views = {'intra':intra, 'juxta':juxta, 'para':para}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/mudata/_core/mudata.py:457: UserWarning: Cannot join columns with the same name because var_names are intersecting.\n"
+     ]
+    }
+   ],
+   "source": [
+    "misty = Misty(views)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>MuData object with n_obs × n_vars = 4205 × 33\n",
+       "  3 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "    juxta:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;\n",
+       "    para:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;</pre>"
+      ],
+      "text/plain": [
+       "MuData object with n_obs × n_vars = 4205 × 33\n",
+       "  3 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "    juxta:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "      obsp:\t'spatial_connectivities'\n",
+       "    para:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "      obsp:\t'spatial_connectivities'"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "misty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<4205x4205 sparse matrix of type '<class 'numpy.float32'>'\n",
+       "\twith 3789473 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "misty._get_conn(\"para\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -439,34 +658,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MistyConstructor():\n",
-    "    def __init__(self, views):\n",
-    "        self.views = views\n",
-    "        self.view_names = views.mod.keys()\n",
-    "        self._check_views()\n",
-    "        \n",
-    "    def _get_view(self, view_name):\n",
-    "        return self.views.mod[view_name]\n",
-    "    \n",
-    "    def _get_view_names(self):\n",
-    "        return self.view_names\n",
-    "    \n",
-    "    def _check_views(self):\n",
-    "        views = self.views\n",
-    "        assert isinstance(views, MuData), \"views must be a MuData object\"\n",
-    "        \n",
-    "        for view in self.view_names:\n",
-    "            if \"spatial_connectivities\" not in views.mod[view].obsp.keys():\n",
-    "                raise ValueError(f\"view {view} must contain a spatial_connectivities key in .obsp\")\n",
-    "            \n",
-    "    def _get_connectivity(self, view_name):\n",
-    "        return self._get_view(view_name).obsp[\"spatial_connectivities\"]\n",
-    "    \n",
-    "    def _get_X(self, view_name):\n",
-    "        return self._get_view(view_name).X\n",
-    "    \n",
-    "    def __call__(self,\n",
-    "                 adata,\n",
+    "def fit(self,\n",
+    "                 views,\n",
     "                 targets = None,\n",
     "                 predictors = None,\n",
     "                 keep_same_predictor = False,  # TODO: maybe rename this variable\n",
@@ -607,35 +800,11 @@
     "                                                        view_str)\n",
     "        if inplace:\n",
     "            adata.uns[\"misty_results\"] = {\"target_metrics\": target_metrics,\n",
-    "                                        \"importances\": importances\n",
-    "                                        }\n",
+    "                                          \"importances\": importances\n",
+    "                                          }\n",
     "        else:\n",
     "            return {\"target_metrics\": target_metrics,\n",
     "                    \"importances\": importances}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Class Misty():\n",
-    "\n"
    ]
   },
   {
