--- a/rewrite_misty.ipynb
+++ b/rewrite_misty.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _make_view(adata, connecitivity=None, spatial_key=None, layer=None, use_raw=False, obs=None):\n",
     "    \n",
-    "    adata = prep_check_adata(adata, use_raw=use_raw, layer=layer, groupby=None, min_cells=None)    \n",
+    "    # `prep_check_adata` for lr; as in basis for any other pipeline\n",
+    "    adata = prep_check_adata(adata, use_raw=use_raw, layer=layer, groupby=None, min_cells=None)\n",
     "    if connecitivity is not None:\n",
     "        conns = connecitivity\n",
     "        obsp = {'spatial_connectivities': conns}\n",
@@ -63,12 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "adata = sc.read_h5ad('liana/tests/data/synthetic.h5ad')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -80,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +111,6 @@
     "                raise ValueError(f\"view {view} must contain a spatial_connectivities key in .obsp\")\n",
     "    \n",
     "    ## TODO assign targets & predictors to views\n",
-    "    \n",
-    "            \n",
     "    def _get_conn(self, view_name):\n",
     "        return self.mod[view_name].obsp[\"spatial_connectivities\"]\n",
     "\n",
@@ -128,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,34 +241,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/mudata/_core/mudata.py:457: UserWarning: Cannot join columns with the same name because var_names are intersecting.\n"
+     ]
+    }
+   ],
    "source": [
     "mdata = MistyData(views, obs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>MuData object with n_obs × n_vars = 4205 × 33\n",
+       "  obs:\t&#x27;cell_type&#x27;\n",
+       "  3 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "    para:\t4205 x 11\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;\n",
+       "    juxta:\t4205 x 11\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;</pre>"
+      ],
+      "text/plain": [
+       "MuData object with n_obs × n_vars = 4205 × 33\n",
+       "  obs:\t'cell_type'\n",
+       "  3 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "    para:\t4205 x 11\n",
+       "      obsp:\t'spatial_connectivities'\n",
+       "    juxta:\t4205 x 11\n",
+       "      obsp:\t'spatial_connectivities'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['intra', 'para', 'juxta']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mdata.view_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +364,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ECM',\n",
+       " 'ligA',\n",
+       " 'ligB',\n",
+       " 'ligC',\n",
+       " 'ligD',\n",
+       " 'prodA',\n",
+       " 'prodB',\n",
+       " 'prodC',\n",
+       " 'prodD',\n",
+       " 'protE',\n",
+       " 'protF']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "targets"
    ]
@@ -335,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_estimators = 100\n",
+    "n_estimators = 20\n",
     "n_jobs = -1\n",
     "seed = 1337\n",
-    "bypass_intra = True\n",
+    "bypass_intra = False\n",
     "keep_same_predictor = False\n",
     "k_cv = 10\n",
     "alphas = [0.1, 1, 10]"
@@ -350,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intra_features = intra.var_names.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +498,7 @@
     "        y = intra[intra_obs_msk, target].X.toarray().reshape(-1)\n",
     "        \n",
     "        # intra is always non-self, while other views can be self\n",
-    "        predictors_nonself, insert_index = _check_target_in_predictors(target, predictors)\n",
+    "        predictors_nonself, insert_index = _check_target_in_predictors(target, intra_features)\n",
     "        _predictors = predictors if keep_same_predictor else predictors_nonself\n",
     "\n",
     "        # TODO: rename to target_importances\n",
@@ -423,14 +506,14 @@
     "        \n",
     "        # model the intraview\n",
     "        if not bypass_intra:\n",
-    "            oob_predictions_intra, importance_dict[\"intra\"] = _single_view_model(y,\n",
-    "                                                                                 intra,\n",
-    "                                                                                 intra_obs_msk, \n",
-    "                                                                                 predictors_nonself, \n",
-    "                                                                                 n_estimators, \n",
-    "                                                                                 n_jobs, \n",
-    "                                                                                 seed\n",
-    "                                                                                 )\n",
+    "            obp_intra, importance_dict[\"intra\"] = _single_view_model(y,\n",
+    "                                                                     intra,\n",
+    "                                                                     intra_obs_msk,\n",
+    "                                                                     predictors_nonself, \n",
+    "                                                                     n_estimators,\n",
+    "                                                                     n_jobs,\n",
+    "                                                                     seed\n",
+    "                                                                     )\n",
     "            if insert_index is not None and keep_same_predictor:\n",
     "                importance_dict[\"intra\"] = np.insert(importance_dict[\"intra\"], insert_index, np.nan)\n",
     "\n",
@@ -440,50 +523,51 @@
     "            oob_list = []\n",
     "\n",
     "            if not bypass_intra:\n",
-    "                oob_list.append(oob_predictions_intra)\n",
+    "                oob_list.append(obp_intra)\n",
     "\n",
     "            # model the juxta and paraview (if applicable)\n",
-    "            ## TODO: remove this thing with all\n",
     "            for view_name in [v for v in view_str if v != \"intra\"]:\n",
     "                extra = mdata.mod[view_name]\n",
-    "                # TODO rename to extra_obs_msk\n",
-    "                env_obs_msk = mdata.obs[group_env_by] == extra_group if extra_group else np.ones(extra.shape[0], dtype=bool)\n",
+    "                extra_obs_msk = mdata.obs[group_env_by] == extra_group if extra_group else np.ones(extra.shape[0], dtype=bool)\n",
+    "                \n",
+    "                extra_features = extra.var_names.to_list()\n",
+    "                _predictors, _ = _check_target_in_predictors(target, extra_features)\n",
     "                \n",
     "                # NOTE indexing here is expensive, but we do it to avoid memory issues\n",
     "                connectivity = mdata._get_conn(view_name)\n",
-    "                view = _mask_connectivity(extra, connectivity, env_obs_msk, _predictors)\n",
+    "                view = _mask_connectivity(extra, connectivity, extra_obs_msk, _predictors)\n",
     "                \n",
     "                oob_predictions, importance_dict[view_name] = \\\n",
     "                    _single_view_model(y,\n",
-    "                                       view, \n",
-    "                                       intra_obs_msk, \n",
-    "                                       _predictors, \n",
+    "                                       view,\n",
+    "                                       intra_obs_msk,\n",
+    "                                       _predictors,\n",
     "                                       n_estimators,\n",
     "                                       n_jobs,\n",
     "                                       seed\n",
     "                                       )\n",
     "                oob_list.append(oob_predictions)\n",
     "\n",
-    "\n",
     "            # train the meta model with k-fold CV \n",
     "            intra_r2, multi_r2, coefs = _multi_model(y,\n",
-    "                                                    np.column_stack(oob_list),\n",
-    "                                                    intra_group, \n",
-    "                                                    bypass_intra, \n",
-    "                                                    view_str, \n",
-    "                                                    k_cv, \n",
-    "                                                    alphas, \n",
-    "                                                    seed\n",
-    "                                                    )\n",
+    "                                                     np.column_stack(oob_list),\n",
+    "                                                     intra_group, \n",
+    "                                                     bypass_intra,\n",
+    "                                                     view_str, \n",
+    "                                                     k_cv,\n",
+    "                                                     alphas, \n",
+    "                                                     seed\n",
+    "                                                     )\n",
     "            \n",
+    "            # write the results to a dataframe\n",
     "            targets_df = _format_targets(target,\n",
-    "                                        intra_group,\n",
-    "                                        extra_group,\n",
-    "                                        view_str,\n",
-    "                                        intra_r2,\n",
-    "                                        multi_r2,\n",
-    "                                        coefs\n",
-    "                                        )\n",
+    "                                         intra_group,\n",
+    "                                         extra_group,\n",
+    "                                         view_str,\n",
+    "                                         intra_r2,\n",
+    "                                         multi_r2,\n",
+    "                                         coefs\n",
+    "                                         )\n",
     "            targets_list.append(targets_df)\n",
     "            \n",
     "            importances_df = _format_importances(target, \n",
@@ -515,9 +599,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "importances"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -525,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "views"
+    "importances"
    ]
   },
   {
